[package]
name = "nile-tools"
version = "0.0.0-git"
edition = "2021"
license = "MIT"
description = "nile tools"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indexmap = { version = "2.2", features = ["serde"] }
nile-library = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
